# rust-library-template

./: .gitignore  Cargo.toml  README.md  TEMPLATE.md  setup.sh
.github/workflows/: ci.yml  notify-project.yml
benches/: benchmarks.rs
src/: lib.rs
src/lib/: mod.rs
src/modules_1/: mod.rs
tests/: integration_test.rs
