[package]
name = "rust-library-template"
version = "0.1.0"
edition = "2021"
authors = ["Tran Manh Duy <tmd.iid2004@gmail.com>"]
description = "This is a template for creating new Rust crypto libraries for the [zk-pathlearn](https://github.com/Tranduy1dol/zk-pathlearn) project."
license = "MIT"
repository = "https://github.com/Tranduy1dol/rust-library-template"
keywords = ["cryptography", "zero-knowledge", "rust"]
categories = ["cryptography"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
